adding pictures and links

--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About Me</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
 </head>
+
 <body>
 
-<h1>About me</h1>
+    <h1>About me</h1>
 
-<h2>Introduction</h2>
+    <h2>Introduction</h2>
 
-<p>My name is Matthew and I'm a technology graduate at Sky.</p>
+    <a href="https://github.com/mb892" target="_blank"><img src="./1659271997159.jpeg" width="100" height="100"></a>
 
-<p>I studied maths/stats and computing at university.</p>
+    <br>
 
-<h2>Hobbies</h2>
-<ol>
-    <li>Rock climbing</li>
-    <li>Football</li>
-</ol>
+    <a href="#hobbies" target="_blank" >Jump to hobbies</a>
+
+    <p>My name is Matthew and I'm a technology graduate at Sky.</p>
+
+    <p>I studied maths/stats and computing at university.</p>
+
+    <h2 id="hobbies">Hobbies</h2>
+    <ol>
+        <li>Rock climbing</li>
+        <li>Football</li>
+    </ol>
 
 </body>
-</html>
+</html>   
