--- a/styled.html
+++ b/styled.html
@@ -9,7 +9,7 @@
         h1 + p{ color: teal; }        /** Any paragraph that is a direct sibling of a heading 1 **/
         h1 ~ p{ color: yellow; }      /** Any paragraph that is a younger sibling of a heading 1 **/
         p.interactive { color: navy; }        /** Any paragraph that has a class of interactive **/
-        .interactive:hover{ color: lime;}         /** Any paragraph that has a class of interactive and hovered over **/
+        p.interactive:hover{ color: lime;}         /** Any paragraph that has a class of interactive and hovered over **/
         #special { color: red;}          /** An element with an id of special **/
         
         article, header, nav, ul, ol, footer{                       /** Any articles, headers, navs, uls, lis and footers **/
@@ -28,16 +28,16 @@
 
         /* SKIP THESE FOR NOW */
 
-        { background-color: #0094ff; }        /** First-child list items **/
-        { background-color: #0094ff; }        /** Last-child list items **/ 
-        { background-color: #0094ff; }        /** Third-child list items **/
-        { background-color: #b6ff00; }        /** Odd-children list items **/
-        { background-color: #1d1bc6; }        /** Even-children list items **/
-        { background-color: #ff0000; }        /** Everything but the first-child list item **/
-        { background-color: #00ff00; }        /** The first paragraph **/
-        { background-color: #0000ff; }        /** The last paragraph **/
-        { background-color: aquamarine; }     /** A label with a for attribute of name **/
-        { background-color: hotpink; }        /** An input with a type attribute of email **/
+        ul > li:first-child { background-color: #0094ff; }        /** First-child list items **/
+        ul > li:last-child {background-color: #0094ff; }        /** Last-child list items **/ 
+        ul > li:nth-child(3){ background-color: #0094ff; }        /** Third-child list items **/
+        ul > li:nth-child(odd){ background-color: #b6ff00; }        /** Odd-children list items **/
+        ul > li:nth-child(even){ background-color: #1d1bc6; }        /** Even-children list items **/
+        ul > li:not(:first-child){ background-color: #ff0000; }        /** Everything but the first-child list item **/
+        p:first-of-type { background-color: #00ff00; }        /** The first paragraph **/
+        p:last-of-type { background-color: #0000ff; }        /** The last paragraph **/
+        label[for=name]{ background-color: aquamarine; }     /** A label with a for attribute of name **/
+        input[type=email]{ background-color: hotpink; }        /** An input with a type attribute of email **/
     </style>
 </head>
 <body>
