--- a/styled.html
+++ b/styled.html
@@ -57,30 +57,40 @@
         </nav>
     </header>
     <article>
-            <h1>Article</h1>
-            <p>paragraph 1</p>
-            <p>paragraph 2</p>
-            <img src="QA_text_blue.png">
-            <footer>Article footer</footer>
-    </article>
-    <footer>
-           Body footer
-    </footer>
-    <p class="interactive">hover me</p>
-    <article>
         <h1>Article</h1>
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
-        <blockquote>Quote</blockquote>
-        <p id="special">Paragraph 3</p>
+        <p>paragraph 1</p>
+        <p>paragraph 2</p>
+        <img src="QA_text_blue.png">
         <footer>Article footer</footer>
-    </article>
-    <article>
-        <p><a href="#news1">Jump to New content 1</a></p>
-        <p><a href="#news2">Jump to New content 2</a></p>
-        <p id="news1">New content 1</p>
-        <p id="news2">New content 2</p>
-    </article>
-    <footer>Body footer</footer>
+</article>
+<footer>
+       Body footer
+</footer>
+<p class="interactive">hover me</p>
+<article>
+    <h1>Article</h1>
+    <p>Paragraph 1</p>
+    <p>Paragraph 2</p>
+    <blockquote>Quote</blockquote>
+    <p id="special">Paragraph 3</p>
+    <footer>Article footer</footer>
+</article>
+<article>
+    <p><a href="#news1">Jump to New content 1</a></p>
+    <p><a href="#news2">Jump to New content 2</a></p>
+    <p id="news1">New content 1</p>
+    <p id="news2">New content 2</p>
+</article>
+  <form>
+    <fieldset>
+        <label for="name">Name:</label>
+        <input type="text" name="name">
+    </fieldset>
+    <fieldset>
+        <label for="email">Email: </label>
+        <input type="email" name="email">
+    </fieldset>
+</form>
+<footer>Body footer</footer>
 </body>
 </html>
